# Data-Structires-and-Algorithms

./: 2_finding MAx & MIN .cpp  4_searching in arrays .cpp  5_linearSearch .cpp  6_BinarySearch.cpp  7_Reverse_Array.cpp  9_Printing_Subarrays.cpp  CMakeLists.txt  README.md
01_Arrays/: 10_BruteForce.cpp  12_Kadane's Algorithm .cpp  3_sorting in arrays .cpp
03_Character Arrays or Strings/: count spaces digits words.cpp
04_2D Arrays/: 3_spiral print.cpp  staircase search.cpp
05_Pointers and Dynamics/: 6_Pass by reference (pointers).cpp
06_Vectors/: vector class -1 .cpp
06_Vectors/06_/: demoVector.cpp
07_Recursion/: 01_recursion.cpp  02_fibonnaci.cpp  03_isSortedArrayCheck.cpp  04_inc_dec.cpp
07_Recursion/.cph/: .01_recursion.cpp_91c959588e2aa8d3db0a215894e77145.prob  .02_fibonnaci.cpp_39fd3939536cfbb9fbe62709d2dfc161.prob  .03_isSortedArrayCheck.cpp_152eab47e7b0638fc42af496b899fce9.prob
17_Binary Tree/: Binary Tree.cpp
18_Binary Search Tree/: Binary Search Tree.cpp
19_Heaps or Priority Queues/: heap_test.cpp
19_Heaps or Priority Queues/Nearest Car Code/: Nearest Car Code .cpp
20_Hashing/: Hashtable.h  hastabletest.cpp
21_Trie Data Structure/: trie.cpp  trie.h
22_Graphs/: 01_adj_list.cpp  02_adj_list.cpp  03_bfsCode_.cpp  05_Topological Ordering using BFS code.cpp
23_Dynamic Programmig/: 1_Coin Change.cpp  2_Longest Common Subsequence Code.cpp  3_Kanpsack Problem Code.cpp  4_Wine Problem.cpp
2_Basic Sorting Techniques/: 7_Using cin.getline() in C++ .cpp
3_Character Arrays or Strings/: 1_Using cin.get in C++  .cpp  Character Arrays.cpp  Largest String.cpp
4_2D Arrays/: Run length encoding.cpp
5_2D Arrays/: 2d arrays.cpp  2d character arrays.cpp
5_Pointers and Dynamics/: 1_pointers.cpp  4_reference variables.cpp
6_Pointers and Dynamics/: 2_pointers.cpp  5_pass by reference.cpp  7_dynamic 2d array.cpp  8_working with dynamic array.cpp
6_Vectors and Data Structures/Vectors/: 2d vector.cpp  demo.cpp  vector.h
Arrays/: 11_PrefixSums.cpp  13_Vector Array .cpp  1_basic array .cpp  8_Printing_Pairs.cpp
Basic Sorting Techniques/: 4_Inbuilt Sort and Comparators .cpp  Bubble Sort .cpp  Counting Sort .cpp  Insertion Sort .cpp  Selection Sort .cpp
